# okws

./: .gitignore  .gitmodules  AUTHORS  BUGS  CMakeHelpers.cmake  CMakeLists.txt  Makefile.am  NEWS  NEWS.md  NOTES  README  README.md  TODO  TODO.pub2  TODO.ssl  acinclude.m4  acokws.m4  autoconf.sed  cfg  configure.in  index.html  okwsconf.h.in  setup  setup.gnu
blrplt/: bld.sh  bld.tar
client/: Makefile.am  bench.C  degz.C  enctst.C  hcli.C  hcli2.T  hsrv.C  msgpack.T  mygz.C  mygz2.C  normdist.C  normdist.h  okdbg.C  okwcmain.C  okwcmain2.T  okwcmain3.T  okwcmain4.T  pt1cli.C  pub3.T  slowcli.T  tmr.C
clock/: Makefile  clckc.c  clckd.c
conf/: Makefile.am  okws_config.dist.in  pub_config.dist.in
contrib/: Makefile.am  coredumps-freebsd.sh  gen-ssl-cert.sh  okws-init-jail.sh  okws-init-jail.sh.in  okws-log-rotate.sh  okws-test-touch-all.sh  okws.sh  pub2-upgrade.py  pub3-upgrade.py  xmlrpcc-x-collect.pl
devel-cases/: c1.html  c2.html  c3.html  c4.html
docs/: cookies  custom-rpc  free-bsd-setup  pub-todo
etc/: okd_config  okws_config.dist  pub_config
examples/: .cvsignore  AUTHORS  Makefile.am  README  acinclude.m4  cfg  configure.in  jail.sh  ltmain.sh  setup  setup.gnu
examples/aux/: google.C  okd_config  okws_config  okws_config.2  pub_config  sha.C  sha2.C
examples/dbprox/: .cvsignore  Makefile.am.m4  pt1d.C  shad.C
examples/html/: README  a.html  ex1.html  ex1a.html  ex1b.html  ex2.html  pt1.html  pt2.html  sha.html
examples/libprot/: Makefile.am.m4  pt1_prot.x  sha_prot.x
examples/sql/: pt1-load.pl  pt1.sh  pt1.sql
examples/websrv/: .cvsignore  Makefile.am.m4  bomb.g  coredump.C  drip.g  google.g  mt1.g  pt1.g  pt2.g  pt3.g  pt4.g  pt5.g  random.g  sha.g  sha2.g  static.T  upload.g
ezdb/: CMakeLists.txt  Makefile.am
htdocs/: Makefile.am  bracket.html  cipher.html  default.html  flat.html  form.html  null.html  post.html  test.conf  upload.html  welcome.html
htdocs/conf/: Makefile.am  inc.conf  intl.conf  mime.types  purify.conf  test.conf
htdocs/d1/: a.html
htdocs/docs/: docs.lib  rfn.lib.doc
htdocs/err/: 404.html  fnf.html
htdocs/lang/: welcome.en.html  welcome.es.html  welcome.fr.html
htdocs/test/: bad.html  bad2.html  basic.html  basic.lib  bracket-bad.html  bracket-bad2.html  bracket.html  c1.html  c2.html  call-ifset.html  dan.html  dan2.html  default.html  doc.html  f1.html  filter.html  for3.html  forloop.html  forloop2.html  forloop3.html  hidden.html  if1.html  ifset.html  inc1.html  inc2.html  inc3.html  inc4.html  inc5.html  input.html  input2.html  isnull.html  list.html  load.html  loadee.html  loader.lib  mod.html  newswitch.html  op.html  purify.html  regex.html  (+11 more)
html/: default.html  ex2.html  iterator.html
libahttp/: .cvsignore  CMakeLists.txt  Makefile.am  abuf.C  abuf.h  abuf_pipe.C  abuf_pipe.h  ahparse.C  ahparse.T  ahparse.h  ahttp.C  ahttp.h  ahttp2.T  ahutil.C  ahutil.h  aparse.C  aparse.h  cgi.C  cgi.h  err.C  err.g  hdr.C  hdr.h  httpconst.C  httpconst.h  inhdr.C  inhdr.h  kmp.C  kmp.h  mimetypes.C  mimetypes.h  mpfd.C  mpfd.h  okcgi.h  okscratch.h  okxml.h  okxml_data.h  okxmldata.h  okxmlparse.h  okxmlwrap.h  (+16 more)
libamongo/: Makefile.am  abson.C  abson.h  amongo.T  amongo.Th
libamt/: CMakeLists.txt  Makefile.am  amt.h  mtdispatch.C  passptr.h
libamt_pthread/: CMakeLists.txt  Makefile.am  amd_pthread.h  amt_pthread.h  mtdispatch_pthread.C
libamysql/: .cvsignore  CMakeLists.txt  Makefile.am  amysql.C  amysql.h  gmtoff.C  gmtoff.h  mybind.C  mybind.h  mystmt.C  mystmt.h  mystmt_ag.pl  tz.C
libaok/: .cvsignore  CMakeLists.txt  Makefile.am  direct.C  locale.C  log.C  log.T  logbuf.C  ok.C  ok.T  ok.h  ok3.T  ok3.h  ok3adapter.C  ok3adapter.Th  ok3adaptor.Th  okerr.h  oklocale.h  oklog.h  okprot.x  okprotext.x  okprotutil.C  okprotutil.h  svq.h  xdrsnappy.C  xdrsnappy.h  xmlrpcsrv.C  xmlrpcsrv.T  xmlrpcsrv.Th  xmlrpcsrv.h
libaok/cruft-2.0/: okerr.h
libmsgpack/: Makefile.am  msgpack.C  okmsgpack.h
libokssl/: CMakeLists.txt  Makefile.am  howto  okssl.h  oksslcon.h  oksslproxy.h  oksslutil.h  proxy.T  sslcon.T  util.C
libokxml/: CMakeLists.txt  Makefile.am  okxml.h  okxmldata.h  okxmlgeneric.h  okxmlobj.h  okxmlparse.h  okxmlwrap.h  okxmlxlate.h  okxmlxlatemgr.h  smartvec.h  xdr_as_json.C  xdr_as_json.h  xml_ahparse.C  xml_ahparse.h  xmldata.C  xmlgeneric.C  xmlobj.C  xmlparse.C  xmlwrap.C  xmlxlate.C  xmlxlatemgr.T
libpub/: .cvsignore  CMakeLists.txt  Makefile.am  adebug.T  authtok.C  authtok.h  axprtfd.h  clist.h  clone.T  data.C  debug.C  escape.C  fd_prot.x  fdfd.C  fdfd.h  fhash.h  holdtab.h  jail.C  json_rpc.C  json_rpc.h  lbalance.C  lbalance.h  msgpack.C  ok_adebug.h  okclone.h  okconst.C  okconst.h  okdbg-int.h  okdbg.h  okformat.h  okmsgpack.h  okprintf.h  okstats.h  oksync.h  okws_rxx.h  okws_sfs.h  okws_sfs.h.in  parr.h  parse.h  parse.yy  (+91 more)
libpub/cruft-2.0/: holdtab.h  lbalance.C  parr.h  pub.C  pub.h  pub2.h  ranges.C  rclient.C  xdr.C
libredis/: CMakeLists.txt  Makefile.am  redis.T  redis.h
librfn/: CMakeLists.txt  Makefile.am  dict.C  file.T  filters.C  filters.T  import.C  list.C  list.T  math.C  okrfn-int.h  okrfn.h  okrfnlib.h  primitives.C  primitives.T  regex.C  rfn.T  rfn3.C  std_factory.C  sync.T  time.C
libweb/: CMakeLists.txt  Makefile.am  email.C  email.h  form.C  form.h  inputcheck.C  okwc.C  okwc.h  okwc2.T  okwc2.h  okwc3.T  okwc3.h  okwc4.T  okwc4.h  okwctok.C  okwctok.h  okwcxml.T  okwcxml.h  web.C  web.h  web_prot.x  webcli.h
logd/: CMakeLists.txt  Makefile.am  logd.C  logd.h
notes/: benjie.txt  dm.092503.txt  feb18.txt  gen.txt  privs.txt  proxy.txt  suite.txt
okd/: .cvsignore  CMakeLists.txt  Makefile.am  child.C  child.T  mgrsrv.C  okd.C  okd.T  okd.h  okld.C  okld.T  okld.h  okld_script.C  okldch.C  okldch.T  okmgr.C  okmgr.T  okmgr.h  shutdown.C  shutdown.T  stats.T
patch/: assignments  coredump-chown-customize  double-ops  json-xlate-0-1  json_rpc-0-1  keepalive-0-1  leak-path  log-attempt-1  patch-p3-shell-strings  pub3-expr-hold-0-1  utf8-cluster-fuck  xmlrpcc-named-field-0-1
pub/: .cvsignore  CMakeLists.txt  Makefile.am  cache.T  cache2.T  (+14 more)
(+404 files in other folders)
