## Process this file with automake to produce Makefile.in
## $Id$

SUBDIRS = libprot websrv dbprox

EXTRA_DIST = setup autoconf.sed .cvsignore

CLEANFILES = core *.core *~

MAINTAINERCLEANFILES = 					\
	aclocal.m4 install-sh mkinstalldirs missing depcomp \
	configure config.guess config.sub config.h.in	\
	INSTALL COPYING Makefile.in stamp-h.in

