##
## $Id$
##
##

HTDOCS_FILES = 		welcome.html cipher.html 
HTDOCS_DOCS_FILES = 	docs/docs.lib docs/rfn.lib.doc
HTDOCS_ERR_FILES = 	err/404.html err/fnf.html err/parseerr.html
HTDOCS_CONF_FILES = 	conf/mime.types conf/intl.conf 
HTDOCS_LANG_FILES = 	lang/welcome.en.html lang/welcome.es.html\
			lang/welcome.fr.html
HTDOCS_IMG_FILES =	img/boat.jpg

HTDOCS_TEST_FILES = 	test/b.html test/buggy1.html test/buggy2.html \
			test/c1.html test/c2.html test/default.html \
			test/f1.html test/f2.html \
			test/newswitch.html test/null.html \
			test/rel.html test/s1.html test/s2.html \
			test/switch.html test/x.html \
			test/d1/a.html test/d1/b.html

okwshtdocs_DATA = 	$(HTDOCS_FILES)
okwshtdocserr_DATA = 	$(HTDOCS_ERR_FILES)
okwshtdocslang_DATA = 	$(HTDOCS_LANG_FILES)
okwshtdocsconf_DATA = 	$(HTDOCS_CONF_FILES)
okwshtdocsimg_DATA = 	$(HTDOCS_IMG_FILES)
okwshtdocsdocs_DATA=    $(HTDOCS_DOCS_FILES)

EXTRA_DIST= 	$(HTDOCS_FILES) $(HTDOCS_ERR_FILES) $(HTDOCS_LANG_FILES) \
		$(HTDOCS_TEST_FILES) $(HTDOCS_CONF_FILES) \
		$(HTDOCS_IMG_FILES) $(HTDOCS_DOCS_FILES)

MAINTAINERCLEANFILES = Makefile.in


